# benpy

./: .gitignore  CHANGELOG.md  CHANGES.md  CODE_ISSUES_REPORT.md  HelperClass.py  INVESTIGATION_SUMMARY.md  MANIFEST.in  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_CANDIDATE.md  SOLUTION_SUMMARY.md  THREADING.md  TestVLP.py  TestVLP2.py  WINDOWS_TESTING_QUICK_REF.md  _img_d.cone  _img_p.cone  _pre_img_d.cone  benpy.c  benpy.pyx  benpyEnv.yml  example_memory_interface.py  pyproject.toml  pytest-results-test.xml  pytest.ini  requirements.txt  setup.py  test_benpy.py  test_benpy_simple.py  test_memory_interface.py  test_solve_consistency.py  tests_memory.py  tests_threading.py  tests_unit.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: AGENT_IMPROVEMENT_REPORT.md  COPILOT_ACCESS_SUMMARY.md  GITHUB_ACTIONS_ACCESS.md  MCP_RESOURCES.md  PUBLISHING_WORKFLOWS.md  README.md  SERVICE_ACCESS_QUICK_REF.md  copilot-instructions.md  create_issues_from_templates.sh
.github/ISSUE_TEMPLATE/: 1-macos-wheel-build-failure.md  2-windows-wheel-build-failure.md  3-ci-expand-matrix.md  4-macos-universal2.md  5-windows-glpk-strategy.md  6-ci-smoke-test.md  7-docs-update-buildingwheels.md  8-tests-wheel-validation.md  9-release-publish-checklist.md
.github/agents/: AGENT_COORDINATION.md  README.md  cicd-agent.md  crossplatform-compiler.md  dev_base.md  docagent.md  my-agent.agent.md  my-agent.md  performance-agent.md  security-agent.md  testing-agent.md
.github/scripts/: install-msys2-packages.sh
.github/workflows/: build-wheels.yml  ci.yml  codeql.yml  dependency-scan.yml  publish.yml  publish_pypi.yml  push-release-candidate-tag.yml  test_publish.yml
benpy/: HelperClass.py
benpy/tests/: TestVLP.py
doc/: A_plan.md  BuildingWheels.md  CI_CD_Documentation.md  CI_Failures_Summary.md  CibuildwheelConfiguration.md  CompileErrorReport.txt  CrossPlatformCompilation.md  HeaderDiffReport.txt  InMemoryInterface.md  MacOS_Ubuntu_WheelBuild_StatusReport.md  MemoryManagement.md  OwnershipPatterns.md  Phase1_Summary.md  Phase2_GIL_Release_Summary.md  Phase2_Summary.md  Phase3_CI_CD_Summary.md  Phase3_TestSuite_Summary.md  README.md  TEST_FAILURE_REPORT.md  ThreadingSafety.md  WINDOWS_TESTING_SUMMARY.md  WindowsPortingChanges.md  WindowsTestCrashes.md  WindowsTestCrashes_RESOLVED.md  WindowsWheelBuildAttempts_Post_c788f5a.md  WindowsWheelBuildTriage.md  WindowsWheelFix_Comparison.md  WindowsWheelFix_QuickRef.md  WindowsWheelSizeOfVoidPFix.md  fix_solve_direct_inconsistency.md
helperClass/: EcosystemModel.py  VlpProblem.py
notebooks/: README.md  example01.ipynb  example02.ipynb  example03.ipynb  example05.ipynb  example06.ipynb  example08.ipynb
src/: benpy.c  benpy.pyx  bslv_main.h
src/bensolve-2.1.0/: bslv_algs.c  bslv_compat.h  bslv_lp.c  bslv_main.c  bslv_poly.c  bslv_poly.h  bslv_vlp.c  bslv_vlp.h
src/bensolve-2.1.0/doc/: release_notes.txt
src/bensolve-2.1.0/ex/: prob2vlp.m
src/bensolve-mod/: .gitrepo  LICENSE.md  README.md
src/examples/: TestVLP.py  bensolve_examples.py  test_threading.py
src/pxd/: README.md  bslv_algs.pxd  bslv_lists.pxd  bslv_lp.pxd  bslv_main.pxd  bslv_poly.pxd  bslv_vlp.pxd
src/tests/: TestVLP.py  TestVLP2.py  test_benpy.py  test_benpy_simple.py
tests/: README.md  WINDOWS_DIAGNOSTICS.md  conftest.py  problems.py  test_api.py  test_examples.py  test_import.py  test_memory.py  test_solve_consistency.py  test_vlpsolution_attrs.py  test_windows_diagnostics.py  validate_windows.py
tools/: README.md  compile_test.sh  create-github-release.sh  diff_headers.sh  install_glpk_macos.sh  push-release-candidate-tag.sh
