[build-system]
requires = ["setuptools", "Cython","numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benpy"
version = "2.1.0"
dependencies = ["prettytable","numpy","scipy"]
authors = [
    {name = 'Marko Budinich', email = "marko.budinich@gmail.com"},
    {name = "Damien Vintache"}
]
maintainers = [
    {name = 'Marko Budinich', email = "marko.budinich@gmail.com"}
]

readme = "README.md"

description ='A Python wrapper around bensolve, for Vector Linear Programs (VLP) and  multiple objective linear programs (MOLP)'
license = {text = 'GPL-3.0'}
#license-files = ["LICENSE.md"]

[project.urls]
Repository = 'https://github.com/markobud/benpy'

#long_description = 'A Python wrapper around bensolve'

[tool.cibuildwheel]
# Build for CPython 3.9-3.12 (3.8 EOL Oct 2024)
build = "cp39-* cp310-* cp311-* cp312-*"

# Skip PyPy, musllinux, and 32-bit builds
skip = "pp* *-musllinux* *-win32 *-manylinux_i686"

# Install build dependencies before building wheel
before-build = "pip install Cython numpy setuptools wheel"

# Test the built wheels
test-requires = ["pytest", "numpy", "scipy", "prettytable"]
# Use pytest's --import-mode=importlib to avoid sys.path manipulation
# First verify benpy imports from site-packages, then run tests
test-command = "python -c \"import benpy; import os; print('benpy from:', benpy.__file__); assert 'site-packages' in benpy.__file__ or 'dist-packages' in benpy.__file__\" && pytest {project}/tests/test_import.py -v --import-mode=importlib"

# Linux-specific configuration
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = [
    "bash -c 'if command -v yum >/dev/null 2>&1; then yum install -y epel-release || true; yum install -y glpk glpk-devel; elif command -v apt-get >/dev/null 2>&1; then apt-get update; apt-get install -y libglpk-dev glpk-utils; else echo \"No supported package manager found (yum or apt-get). Cannot install GLPK.\" >&2; exit 1; fi'",
]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# macOS-specific configuration
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = [
    # Install GLPK for the target architecture
    "bash -c 'if [ \"$(uname -m)\" = \"x86_64\" ]; then arch -x86_64 brew install glpk || brew install glpk; else brew install glpk; fi'",
    "pip install delocate",
]
environment = { MACOSX_DEPLOYMENT_TARGET="13.0" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

# Windows-specific configuration
[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = [
    "C:\\msys64\\usr\\bin\\bash -lc 'pacman -S --noconfirm mingw-w64-x86_64-glpk mingw-w64-x86_64-gcc'",
]
environment = { CFLAGS="-IC:/msys64/mingw64/include", LDFLAGS="-LC:/msys64/mingw64/lib", PATH="C:\\msys64\\mingw64\\bin;$PATH" }
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"