[build-system]
requires = ["setuptools", "Cython>=3.0.0","numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benpy"
version = "2.1.0"
dependencies = ["prettytable","numpy","scipy>=1.14"]
authors = [
    {name = 'Marko Budinich', email = "marko.budinich@gmail.com"},
    {name = "Damien Vintache"}
]
maintainers = [
    {name = 'Marko Budinich', email = "marko.budinich@gmail.com"}
]

readme = "README.md"

description ='A Python wrapper around bensolve, for Vector Linear Programs (VLP) and  multiple objective linear programs (MOLP)'
license = {text = 'GPL-3.0'}
#license-files = ["LICENSE.md"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
benpy = [
    "bensolve-2.1.0/ex/*.vlp",
    "bensolve-2.1.0/ex/*.m",
    "bensolve-2.1.0/ex/*.mat",
    "bensolve-2.1.0/ex/*.txt",
    "bensolve-2.1.0/doc/*",
    "examples/*.py"
]

[project.urls]
Repository = 'https://github.com/markobud/benpy'

#long_description = 'A Python wrapper around bensolve'

[tool.cibuildwheel]
# Build for CPython 3.10-3.12 (3.9 has numpy incompatibility)
build = "cp310-* cp311-* cp312-*"

# Skip PyPy, musllinux, and 32-bit builds
skip = "pp* *-musllinux* *-win32 *-manylinux_i686"

# Install build dependencies before building wheel
before-build = "pip install Cython numpy setuptools wheel"

# Test the built wheels
test-requires = ["pytest", "numpy", "scipy", "prettytable"]
# Use pytest's --import-mode=importlib to avoid sys.path manipulation
# First verify benpy imports from site-packages, then run tests
test-command = "python -c \"import benpy; import os; print('benpy from:', benpy.__file__); assert 'site-packages' in benpy.__file__ or 'dist-packages' in benpy.__file__\" && pytest {project}/tests/test_import.py -v --import-mode=importlib"

# Linux-specific configuration
[tool.cibuildwheel.linux]
before-all = [
    "bash -c 'if command -v yum >/dev/null 2>&1; then yum install -y epel-release || true; yum install -y glpk glpk-devel; elif command -v apt-get >/dev/null 2>&1; then apt-get update; apt-get install -y libglpk-dev glpk-utils; else echo \"No supported package manager found (yum or apt-get). Cannot install GLPK.\" >&2; exit 1; fi'",
]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
# Prefer binary wheels for scipy to avoid build issues in manylinux containers
environment = { PIP_PREFER_BINARY="1" }

# macOS-specific configuration
# Both macos-15 and macos-14 are Apple Silicon (arm64) runners
# They build arm64 wheels natively using Homebrew GLPK
# Intel Mac users can run arm64 wheels via Rosetta 2
[tool.cibuildwheel.macos]
before-all = [
    # Install GLPK using Homebrew (native arm64 on Apple Silicon runners)
    "bash {project}/tools/install_glpk_macos.sh",
    "pip install delocate",
]
# Note: MACOSX_DEPLOYMENT_TARGET is set in the workflow file per runner
# Delocate will bundle GLPK dylibs into the wheel
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
# Prefer binary wheels for scipy to avoid build issues
environment = { PIP_PREFER_BINARY="1" }

# Windows-specific configuration
[tool.cibuildwheel.windows]
before-all = [
    # Install MSYS2 packages with retry logic for robustness against mirror failures
    "bash .github/scripts/install-msys2-packages.sh",
    "pip install delvewheel",
]
# Configure distutils to use MinGW GCC instead of MSVC
before-build = [
    "pip install Cython numpy setuptools wheel",
    "python -c \"import os; content='[build]\\ncompiler=mingw32\\n\\n[build_ext]\\ncompiler=mingw32\\n'; os.makedirs(os.path.expanduser('~'), exist_ok=True); open(os.path.join(os.path.expanduser('~'), 'pydistutils.cfg'), 'w').write(content); print('Created pydistutils.cfg with MinGW compiler')\"",
]
# Force use of MinGW GCC instead of MSVC
environment = { CC="gcc", CXX="g++", CFLAGS="-IC:/msys64/mingw64/include", LDFLAGS="-LC:/msys64/mingw64/lib", PATH="C:\\msys64\\mingw64\\bin;$PATH", PIP_PREFER_BINARY="1" }
# Add MSYS2 MinGW64 bin directory to delvewheel search path for finding libglpk-40.dll
repair-wheel-command = "delvewheel repair --add-path C:\\msys64\\mingw64\\bin -w {dest_dir} {wheel}"